# routes/user.js
@@ -3,8 +3,8 @@ const router = express.Router();
 const userController = require('../controllers/user');
 const { isAuthenticated } = require('../util/authenticate');
 
-router.get('/', userController.getUsers);
-router.get('/:id', isAuthenticated, userController.getSingle);
+router.get('/',isAuthenticated, userController.getUsers);
+router.get('/:id', userController.getSingle);
 
 router.post('/', userController.createUser);
 
